# amazonpickingchallenge

./: CMakeLists.txt  README.md  manifest.xml
apc_data_writer/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
apc_data_writer/include/: data_writer.h
apc_data_writer/src/: data_writer.cpp  main.cpp
eblearn_data_writer/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
eblearn_data_writer/include/: data_recorder.h
eblearn_data_writer/src/: data_recorder.cpp
recogniser/: CMakeLists.txt  README.md  manifest.xml
recogniser/data/: amazon.json
recogniser/data/amazon_models/: dr_browns_bottle_brush.xml
recogniser/data/object_models/: belvita_milk.xml  moroccan_beef.xml  oreo.xml
recogniser/include/: feature_matcher.h  mask_generator.h  offline_recogniser.h  rgb_recogniser.h  rgbd_recogniser.h  svd_pose_estimator.h  system_calibrator.h  utils.h  uts_recogniser.h
recogniser/msg/: RowBinObjects.msg
recogniser/src/: feature_cluster.cpp  feature_detector.cpp  mask_generator.cpp  offline_recogniser.cpp  pseudo_request.cpp  rgb_recogniser.cpp  rgbd_recogniser.cpp  svd_pose_estimator.cpp  utils.cpp  uts_recogniser.cpp
recogniser/src/uts_recogniser/msg/: _Action.py  _BinObjects.py  _DefineLocation.py  _ForceRead.py  _HandOff.py  _NameTypeValue.py  _Object.py  _ObjectPose.py  _RailsState.py  _RotatedLaserScan.py  _RowBinObjects.py  _SignalAction.py  _SignalActionResult.py  _SignalGoal.py  _SignalResult.py  _Trimesh.py  _WAMJointState.py  __init__.py  _herbActionGoal.py  _herbActionResult.py  _herbFeedback.py  _oldAppletCommand.py
recogniser/src/uts_recogniser/srv/: _ArmConfigCheck.py  _BinsIndices.py  _Enable.py  _ResumeTrajectory.py  __init__.py
uts_recogniser/: CMakeLists.txt  manifest.xml  package.xml
uts_recogniser/.svn/: all-wcprops  entries
uts_recogniser/.svn/text-base/: CMakeLists.txt.svn-base  README.md.svn-base  mainpage.dox.svn-base  manifest.xml.svn-base
uts_recogniser/data/: 201504171107.json  201505010645.json  201505041207.json  README.md
uts_recogniser/data/.svn/: all-wcprops  entries
uts_recogniser/data/.svn/text-base/: method.txt.svn-base
uts_recogniser/data/201504174639/: xtion_rgb_info_10.yml
uts_recogniser/data/201504174639/.svn/: all-wcprops  entries
uts_recogniser/data/amazon_models/: elmers_washable_no_run_school_glue.xml  feline_greenies_dental_treats.moped.xml  mark_twain_huckleberry_finn.xml  mead_index_cards.xml  sharpie_accent_tank_style_highlighters.xml
uts_recogniser/data/amazon_models/.svn/: all-wcprops  entries
uts_recogniser/data/eblearn/: dr_browns_bottle_brush.conf  first_years_take_and_toss_straw_cups.conf  kong_air_dog_squeakair_tennis_ball.conf  kong_duck_dog_toy.conf  kong_sitting_frog_dog_toy.conf  kygen_squeakin_eggs_plush_puppies.conf  mommys_helper_outlet_plugs.conf  munchkin_white_hot_duck_bath_toy.conf  safety_works_safety_glasses.conf  sharpie_accent_tank_style_highlighters.conf  stanley_66_052.conf  template.conf
uts_recogniser/data/eblearn/models/: .\detected\cup.conf  dr_browns_bottle_brush+bg_val_classes.mat  dr_browns_bottle_brush.mat  first_years_take_and_toss_straw_cup+bg_val_classes.mat  first_years_take_and_toss_straw_cup.mat  kong_air_dog_squeakair_tennis_ball+bg_val_classes.mat  kong_air_dog_squeakair_tennis_ball.mat  kong_duck_dog_toy+bg_val_classes.mat  kong_duck_dog_toy.mat  kong_sitting_frog_dog_toy+bg_val_classes.mat  kong_sitting_frog_dog_toy.mat  kyjen_squeakin_eggs_plush_puppies+bg_val_classes.mat  kyjen_squeakin_eggs_plush_puppies.mat  mommys_helper_outlet_plugs+bg_val_classes.mat  mommys_helper_outlet_plugs.mat  munchkin_white_hot_duck_bath_toy+bg_val_classes.mat  munchkin_white_hot_duck_bath_toy.mat  safety_works_safety_glasses+bg_val_classes.mat  safety_works_safety_glasses.mat  sharpie_accent_tank_style_highlighters+bg_val_classes.mat  sharpie_accent_tank_style_highlighters.mat  stanley_66_052+bg_val_classes.mat  stanley_66_052.mat
uts_recogniser/data/kd_models/.svn/: all-wcprops  entries
uts_recogniser/dependencies/: eblearn.pc
uts_recogniser/dependencies/.svn/: all-wcprops  entries
uts_recogniser/dependencies/.svn/text-base/: levmar.pc.svn-base  libsiftfast.a.svn-base
uts_recogniser/include/: feature_cluster.h  json_parser.hpp  levmar_pose_estimator.h  offline_recogniser.h  uts_recogniser.h
uts_recogniser/include/.svn/: all-wcprops  entries
uts_recogniser/include/.svn/text-base/: feature_detector.h.svn-base  offline_recogniser.h.svn-base  rgb_recogniser.h.svn-base  rgbd_recogniser.h.svn-base  uts_recogniser.h.svn-base
uts_recogniser/include/ANN/.svn/: all-wcprops  entries
uts_recogniser/include/helpfun/: eblearn_recogniser.h  feature_cluster.h  feature_detector.h  feature_matcher.h  json_parser.hpp  kd_recogniser.h  levmar_pose_estimator.h  mask_generator.h  projection_filter.h  rgb_recogniser.h  rgbd_recogniser.h  svd_pose_estimator.h  utils.h
uts_recogniser/include/helpfun/.svn/: all-wcprops  entries
uts_recogniser/include/kdes/: helpfun.hpp  libkdes.h  mat.h
uts_recogniser/include/kdes/.svn/: all-wcprops  entries
uts_recogniser/include/kdes/matio/: matioConfig.h  mattest.h
uts_recogniser/include/levmar/.svn/: all-wcprops  entries
uts_recogniser/include/siftfast/.svn/: all-wcprops  entries
uts_recogniser/include/uts_recogniser/.svn/: all-wcprops  entries
uts_recogniser/launch/: init.launch  recogniser.launch  request.launch
uts_recogniser/src/: eblearn_test.cpp  json_generator.cpp  kd_test.cpp  levmar_pose_estimator.cpp  offline_recogniser.cpp  projection_filter.cpp  pseudo_request.cpp  system_calibrator.cpp  uts_init.cpp  uts_recogniser.cpp
uts_recogniser/src/.svn/: all-wcprops  entries
uts_recogniser/src/.svn/text-base/: feature_matcher.cpp.svn-base  kd_test.cpp.svn-base  (+8 more)
uts_recogniser/src/helpfun/: eblearn_recogniser.cpp  feature_cluster.cpp  feature_detector.cpp  feature_matcher.cpp  kd_recogniser.cpp  levmar_pose_estimator.cpp  mask_generator.cpp  projection_filter.cpp  rgb_recogniser.cpp  rgbd_recogniser.cpp  svd_pose_estimator.cpp  system_calibrator.cpp  utils.cpp
uts_recogniser/src/kdes/: libkdes.cpp
(+186 files in other folders)
